# objseqToAlembicExporter

./: .gitignore  CMakeLists.txt  OBJSeqToAlembicUI.spec  README.md  build.bat  build_dev.bat  build_release.bat  build_win_pyinstaller.bat
src/: main.cpp
ui/: obj_seq_to_abc_ui.py
